--- a/Templates/Through_Less/index.html
+++ b/Templates/Through_Less/index.html
@@ -3,9 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Portfolio</title>
+
+    <link rel="stylesheet" href="css/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,700;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     
+    <!-- Header -->
+    <div class="header">
+        <div class="container">
+            <div class="header__inner">
+                <div class="user">
+                    <div class="user__avatar">
+                        <img src="https://placehold.it/57/333" alt="">
+                    </div>
+                    <div class="user__content">
+                        <div class="user__name">Lewis <br>
+                            Nathaniel</div>
+                        <div class="user__prof">UI & UX Designer</div>
+                    </div>
+                </div>
+
+                <nav class="nav">
+                    <a class="nav__link" href="">Work</a>
+                    <a class="nav__link" href="">About me</a>
+                    <a class="nav__link" href="">Blog</a>
+                    <a class="nav__link" href="">Contact</a>
+                    <a class="nav__link nav__link--btn" href="">hire me</a>
+                </nav>
+            </div>
+        </div>
+    </div>
+
+
+
+    <!-- Intro -->
+    <section class="intro">
+        <div class="container">
+            <div class="intro__inner">
+                <div class="intro__content">
+                    <h2 class="intro__subtitle">Hello, I'm</h2>
+                    <h1 class="intro__title">Lewis Nathaniel</h1>
+                    <div class="intro__text"></div>
+                </div>
+                
+                <div class="intro__photo"></div>
+            </div>
+        </div>
+    </section>
+
+
+
 </body>
 </html>
