--- a/Templates/Through_Less/css/blocks/_intro.less
+++ b/Templates/Through_Less/css/blocks/_intro.less
@@ -1,2 +1,45 @@
 // main: ..//main.less
 
+.intro__inner {
+    display: flex;
+    padding-top: 100px;
+    padding-bottom: 120px;
+    position: relative;
+
+    background: url(../../img/symbols.png) right bottom no-repeat;
+    border-bottom: 1px solid #f1f1f1;
+}
+
+.intro__content {
+    width: 50%;
+}
+
+.intro__title {
+    margin-bottom: 10px;
+
+    font-size: 3rem;
+    font-weight: 700;
+    color: @black;
+}   
+
+.intro__subtitle {
+    font-size: 2.13rem;
+    font-weight: 300;
+    color: @black;
+}
+
+.intro__text {
+    margin-bottom: 25px;
+
+    font-size: 1.2rem;
+    font-weight: 400;
+    line-height: 1rem;
+    color: @gray;
+}
+
+.intro__photo {
+    position: absolute;
+    bottom: -1px;
+    right: 0;
+    z-index: 1;
+}
