--- a/Templates/Through_Less/css/main.less
+++ b/Templates/Through_Less/css/main.less
@@ -12,6 +12,10 @@ body {
     color: @black;
 }
 
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+}
+
 *,
 *:before,
 *:after { 
@@ -25,3 +29,13 @@ body {
 @import "blocks/_user.less";
 @import "blocks/_nav.less";
 @import "blocks/_intro.less";
+@import "blocks/_social.less";
+@import "blocks/_btn.less";
+@import "blocks/_works.less";
+@import "blocks/_portfolio.less";
+@import "blocks/_work.less";
+@import "blocks/_about.less";
+
+
+/* Helpers */
+@import "blocks/_helpers.less";
