--- a/Templates/Through_Less/index.html
+++ b/Templates/Through_Less/index.html
@@ -10,6 +10,8 @@
 </head>
 <body>
     
+
+
     <!-- Header -->
     <div class="header">
         <div class="container">
@@ -41,17 +43,164 @@
     <!-- Intro -->
     <section class="intro">
         <div class="container">
+
             <div class="intro__inner">
                 <div class="intro__content">
                     <h2 class="intro__subtitle">Hello, I'm</h2>
                     <h1 class="intro__title">Lewis Nathaniel</h1>
-                    <div class="intro__text"></div>
+                    <div class="intro__text">UI & UX Designer</div>
+
+                    <div class="social">
+                        <a href="#" class="social__link">
+                            <img src="img/Be.jpg" alt="">
+                        </a>
+                        <a href="#" class="social__link">
+                            <img src="img/Dribbble.jpg" alt="">
+                        </a>
+                        <a href="#" class="social__link">
+                            <img src="img/In.jpg" alt="">
+                        </a>
+                        <a href="#" class="social__link">
+                            <img src="img/Fb.jpg" alt="">
+                        </a>
+                        <a href="#" class="social__link">
+                            <img src="img/Instagram.jpg" alt="">
+                        </a>
+                        <a href="#" class="social__link">
+                            <img src="img/Twitter.jpg" alt="">
+                        </a>
+                    </div>
+
+                    <a class="btn" href="#">HIRE ME</a>
+                    <button class="btn" type="button" href="#">SEE ME RESUME</button>
+                </div>
+
+                <img class="intro__photo" src="img/photo.png" alt="">
+            </div><!-- /.intro__inner -->
+
+        </div><!-- /.container -->
+    </section>
+
+
+
+    <!-- Works -->
+    <div class="works">
+        <div class="container">
+
+            <div class="works__nav">
+                <a href="" class="works__nav-link">All</a>
+                <a href="" class="works__nav-link">App</a>
+                <a href="" class="works__nav-link">Websites</a>
+                <a href="" class="works__nav-link">Interaction</a>
+            </div>
+
+            <div class="portfolio">
+                <div class="portfolio__col">
+                    <div class="work">
+                        <img class="work__image" src="https://placehold.it/370x300" alt="">
+                        <div class="work__content">    
+                            <div class="work__cat">Category</div>
+                            <div class="work__title">
+                                Project title
+                                <time class="work__date" datetime="2020-07-16 12:00">2020</time>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 
-                <div class="intro__photo"></div>
+                <div class="portfolio__col">
+                    <div class="work">
+                        <img class="work__image" src="https://placehold.it/370x300" alt="">
+                        <div class="work__content">    
+                            <div class="work__cat">Category</div>
+                            <div class="work__title">
+                                Project title
+                                <time class="work__date" datetime="2020-07-16 12:00">2020</time>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="portfolio__col">
+                    <div class="work">
+                        <img class="work__image" src="https://placehold.it/370x300" alt="">
+                        <div class="work__content">    
+                            <div class="work__cat">Category</div>
+                            <div class="work__title">
+                                Project title
+                                <time class="work__date" datetime="2020-07-16 12:00">2020</time>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio__col">
+                    <div class="work">
+                        <img class="work__image" src="https://placehold.it/370x300" alt="">
+                        <div class="work__content">    
+                            <div class="work__cat">Category</div>
+                            <div class="work__title">
+                                Project title
+                                <time class="work__date" datetime="2020-07-16 12:00">2020</time>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio__col">
+                    <div class="work">
+                        <img class="work__image" src="https://placehold.it/370x300" alt="">
+                        <div class="work__content">    
+                            <div class="work__cat">Category</div>
+                            <div class="work__title">
+                                Project title
+                                <time class="work__date" datetime="2020-07-16 12:00">2020</time>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="portfolio__col">
+                    <div class="work">
+                        <img class="work__image" src="https://placehold.it/370x300" alt="">
+                        <div class="work__content">    
+                            <div class="work__cat">Category</div>
+                            <div class="work__title">
+                                Project title
+                                <time class="work__date" datetime="2020-07-16 12:00">2020</time>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div><!-- /.portfolio -->
+
+            <div class="text-center">
+                <a href="#" class="btn btn--sm">load more work</a>
+            </div>
+
+        </div><!-- /.container -->
+    </div><!-- /.works -->
+
+
+
+    <!-- About -->
+    <section class="about">
+        <div class="container">
+            <div class="about__inner">
+                <div class="about__photo"></div>
+                <div class="about__content">
+                    <h3 class="about__title">About me</h3>
+                    <h2 class="about__bigtitle">Who am I</h2>
+                    <div class="about__text">
+                        <p>
+                            lo
+                        </p>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
+
 
 
 
